# tokenmesh

./: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/skills/tokenmesh/: SKILL.md
app/: globals.css  layout.tsx  page.tsx
app/console/: page.tsx
components/: comparison.tsx  cta.tsx  dashboard.tsx  faq.tsx  footer.tsx  hero.tsx  how-it-works.tsx  logo.tsx  models.tsx  navbar.tsx  pillars.tsx  pricing.tsx  problem.tsx  routing-demo.tsx  stats.tsx
components/console/: developer-console.tsx
lib/: tokenmesh-api.ts
scripts/: assemble-web.mjs  chat.sh  try.sh
src/tokenmesh/: __init__.py  app.py  auth.py  billing.py  cache.py  classifier.py  cli.py  config.py  evolution.py  keys.py  models.py  optimizer.py  projects.py  provider.py  status.py  usage.py
src/tokenmesh/static/: index.html
src/tokenmesh/web/: 404.html  index.html
src/tokenmesh/web/_next/static/EkOWEpMhKyJ6mk3260ga_/: _buildManifest.js
src/tokenmesh/web/_next/static/chunks/: 846-0e6187dbe6a9555a.js  main-app-16427ca283eaaae6.js
src/tokenmesh/web/_next/static/chunks/app/: layout-989f4699c35bc253.js  page-814fb90999792f01.js  page-cdd1072502577310.js
src/tokenmesh/web/_next/static/chunks/app/_not-found/: page-d0206567c71b146f.js
src/tokenmesh/web/_next/static/css/: 1ca8ba5c7d5b4316.css  799af80caf404ac9.css
src/tokenmesh/web/console/: index.html
tests/: test_auth.py  test_classifier.py  test_evolution.py  test_optimizer.py
(+2 files in other folders)
