[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenmesh"
version = "0.2.0"
description = "Tokenmesh — cost-aware LLM gateway with task-aware routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tiktoken>=0.7.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
billing = [
    "stripe>=10.0.0",
]
cache = [
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
tokenmesh = "tokenmesh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenmesh"]
